dobavil formu avtorizacii v index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Форма АВТОРИЗАЦИИ</h1>
+    <h1>Форма АВТОРИЗАЦИИ</h1>
+    <h1>Форма АВТОРИЗАЦИИ</h1>
 
     <h2>Форма РЕгистрации</h2>
 </body>
