dobavlena forma registracii

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Форма АВТОРИЗАЦИИ</h1>
 
     <h2>Форма РЕгистрации</h2>
+    <h2>Форма РЕгистрации</h2>
+    <h2>Форма РЕгистрации</h2>
 </body>
 </html>
