--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
     <h2>Форма РЕгистрации</h2>
     <h2>Форма РЕгистрации</h2>
     <h2>Форма РЕгистрации</h2>
+    <h1>Форма АВТОРИЗАЦИИ</h1>
+    <h1>Форма АВТОРИЗАЦИИ</h1>
+    <h1>Форма АВТОРИЗАЦИИ</h1>
+
+    <h2>Форма РЕгистрации</h2>
+    <h2>Форма РЕгистрации</h2>
+    <h2>Форма РЕгистрации</h2>
 </body>
 </html>
